--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "env-cmd -f ./config/dev.env node src/app.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/app.js",
+    "edit": "swagger project edit",
     "test": ""
+  },
+  "engines": {
+    "node": "12.x"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +23,10 @@
     "mongoose": "^5.10.0",
     "multer": "^1.4.2",
     "sharp": "^0.26.0",
+    "swagger": "^0.7.5",
+    "swagger-editor": "^3.13.0",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4",
     "validator": "^13.1.1"
   },
   "devDependencies": {
